--- a/0x00-Webpack/task_1/package.json
+++ b/0x00-Webpack/task_1/package.json
@@ -11,12 +11,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-validator": "^3.0.1"
   },
   "dependencies": {
-    "jquery": "^3.7.0",
+    "jquery": "^3.7.1",
     "lodash": "^4.17.21"
   }
 }
-
