--- a/0x00-Webpack/task_1/package.json
+++ b/0x00-Webpack/task_1/package.json
@@ -12,8 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-validator": "^3.0.1"
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "jquery": "^3.7.1",
