--- a/0x00-Webpack/task_2/package.json
+++ b/0x00-Webpack/task_2/package.json
@@ -11,11 +11,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^5.89.0",
+    "css-loader": "^6.8.1",
+    "file-loader": "^6.2.0",
+    "image-webpack-loader": "^8.1.0",
+    "style-loader": "^3.3.3",
+    "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "jquery": "^3.7.1",
+    "jquery": "^3.7.0",
     "lodash": "^4.17.21"
   }
 }
