--- a/0x03-React_component/task_0/dashboard/package.json
+++ b/0x03-React_component/task_0/dashboard/package.json
@@ -20,7 +20,7 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.2",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
+    "@cfaester/enzyme-adapter-react-18": "^0.7.1",
     "file-loader": "^6.2.0",
     "image-webpack-loader": "^7.0.1",
     "jest": "^26.6.3",
@@ -31,8 +31,8 @@
   },
   "dependencies": {
     "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "jest": {
     "setupFiles": [
