--- a/0x03-React_component/task_0/dashboard/package.json
+++ b/0x03-React_component/task_0/dashboard/package.json
@@ -17,10 +17,11 @@
     "@babel/core": "^7.12.16",
     "@babel/preset-env": "^7.12.16",
     "@babel/preset-react": "^7.12.13",
+    "@cfaester/enzyme-adapter-react-18": "^0.7.1",
+    "@types/prop-types": "^15.7.11",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.2",
     "enzyme": "^3.11.0",
-    "@cfaester/enzyme-adapter-react-18": "^0.7.1",
     "file-loader": "^6.2.0",
     "image-webpack-loader": "^7.0.1",
     "jest": "^26.6.3",
@@ -30,7 +31,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "prop-types": "^15.7.2",
+    "prop-types": "^15.8.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
